clusters/dev/api-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node
spec:
  selector:
    app: api-node
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
